--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,81 @@
 *{
-    margin: 0 auto;
-    padding: 0;
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
 
-.row{
-    margin:0 auto;
+.container{
+    
     width: 1200px;
-    margin-top:20px;
+    margin: 0 auto;
 }
-header.row{
-    height: 150px;
-    background-color: darkorchid;
+
+header{
+    background-color: #e79bdf;
+    height: 100px;
+    margin-bottom: 20px;
 }
 .jumbo{
-    height: 650px;
-    background-color:goldenrod;
-}
-.main{
-    height: 650px;
-    background-color:darkturquoise;
-}
-.top{
-    height: 80px;
-    width: 100%;
-    background-color: teal;
-    margin-bottom:20px;
-}
-.laterale{
-    width: 290px;
-    height: 520px;
-    background-color: teal;
-    float: left;
-}
-.centrale{
-    float: left;
-    height: 520px;
-    background-color: teal;
-    width: 580px;
-    margin:0 20px;
-}
-
-
-
-footer.row{
+    background-color: #e3d47c;
+    height:300px;
     margin-bottom: 20px;
+}
+
+main{
+    margin-bottom: 10px;
+}
+
+footer{
+    background-color: purple;
     height: 100px;
-    background-color: navy;
+}
+
+
+.row{
+    background-color: blue;
+    padding-bottom:20px;
+}
+
+.row::after{
+    clear: both;
+    content: "";
+    display: table;
+}
+
+
+
+
+
+.top-main{
+    width: 100%;
+    background-color: #abcce4;
+    height: 100px;
+    margin-bottom: 20px;
+}
+
+
+
+
+
+
+.float{
+    float: left;
+}
+
+.left, .right{
+    width: 25%;
+}
+.left, .center{
+    padding-right: 15px;
+}
+
+.center{
+    width: 50%;
+}
+
+
+.el{
+    background-color: #abcce4;
+    width: 100%;
+    height: 500px;
 }
