--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,106 @@
 *{
+    box-sizing: border-box;
     margin:0;
     padding:0;
-    box-sizing: border-box;
 }
 
 .container{
-    
-    width: 1200px;
-    margin: 0 auto;
+    margin:50px auto;
+    width: 1000px;
 }
 
 header{
-    background-color: #e79bdf;
-    height: 100px;
-    margin-bottom: 20px;
+    width: 100%;
+    height: 140px;
+    background-color: palevioletred;
 }
 .jumbo{
-    background-color: #e3d47c;
-    height:300px;
-    margin-bottom: 20px;
-}
-
-main{
-    margin-bottom: 10px;
-}
-
-footer{
-    background-color: purple;
-    height: 100px;
-}
-
-
-.row{
-    background-color: blue;
-    padding-bottom:20px;
-}
-
-.row::after{
-    clear: both;
-    content: "";
-    display: table;
-}
-
-
-
-
-
-.top-main{
-    width: 100%;
-    background-color: #abcce4;
-    height: 100px;
-    margin-bottom: 20px;
-}
-
-
-
-
-
-
-.float{
-    float: left;
-}
-
-.left, .right{
-    width: 25%;
-}
-.left, .center{
-    padding-right: 15px;
-}
-
-.center{
-    width: 50%;
-}
-
-
-.el{
-    background-color: #abcce4;
     width: 100%;
     height: 500px;
+    background-color: khaki;
+    margin-top:20px;
 }
+main{
+    margin-top: 20px;
+    width: 100%;
+    height: 610px;
+    background-color: mediumblue;
+}
+.main-header{
+    width: 100%;
+    height: 70px;
+    background-color: lightskyblue;
+    margin-bottom:20px;
+}
+
+
+/* ---------------RAW---------- */
+
+.raw{
+    width: 100%;
+    height: 500px;
+    background-color: mediumblue;
+}
+.raw::after{
+    content:" ";
+    clear: both;
+    display: table;
+}
+.laterale{
+    width: 25%;
+    height: 100%;
+    background-color: lightskyblue;
+    float: left;
+}
+.centrale{
+    width: 50%;
+    height: 100%;
+    padding:0 20px;
+    float: left;
+}
+.center-content{
+    width: 100%;
+    height: 100%;
+    background-color: lightskyblue;
+
+}
+/* -------------------FOOTER------------- */
+
+footer{
+    margin-top:20px;
+    width: 100%;
+    height: 80px;
+    background-color:palevioletred;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
